// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InputRadio API 1`] = `
.c2 {
  height: 14px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  line-height: 0;
}

.c0 > input {
  display: none;
}

.c0 > .c1 {
  margin-right: 5px;
}

.c3 {
  fill: #00A1DE;
  stroke: #067CB0;
  stroke-width: 1px;
  -webkit-transition: stroke 0.3s cubic-bezier(0.23,1,0.32,1);
  transition: stroke 0.3s cubic-bezier(0.23,1,0.32,1);
}

.c4 {
  fill: #FFFFFF;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-transition: -webkit-transform 0.45s cubic-bezier(0.23,1,0.32,1);
  -webkit-transition: transform 0.45s cubic-bezier(0.23,1,0.32,1);
  transition: transform 0.45s cubic-bezier(0.23,1,0.32,1);
  -webkit-transform: scale( 0.5 );
  -ms-transform: scale( 0.5 );
  transform: scale( 0.5 );
}

<InputRadio
  onChange={[Function]}
  value={true}
>
  <styled-components__StyledLabel
    onClick={[Function]}
  >
    <StyledComponent
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "styled-components__StyledLabel-sc-1vsiozb-1",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  align-items: center;
  cursor: pointer;
  line-height: 0;

  > input {
    display: none;
  }

  > ",
              ".c1",
              " {
    margin-right: 5px;
  }
",
            ],
          },
          "displayName": "styled-components__StyledLabel",
          "render": [Function],
          "styledComponentId": "styled-components__StyledLabel-sc-1vsiozb-1",
          "target": "label",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      onClick={[Function]}
    >
      <label
        className="c0"
        onClick={[Function]}
      >
        <styled-components__SVG
          value={true}
          viewBox="0 0 14 14"
        >
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "c1",
                  "isStatic": true,
                  "lastClassName": "c2",
                  "rules": Array [
                    "
  height: 14px;
",
                  ],
                },
                "displayName": "styled-components__SVG",
                "render": [Function],
                "styledComponentId": "c1",
                "target": "svg",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            value={true}
            viewBox="0 0 14 14"
          >
            <svg
              className="c1 c2"
              value={true}
              viewBox="0 0 14 14"
            >
              <styled-components__BoxCircle
                cx="7"
                cy="7"
                r="6"
                value={true}
              >
                <StyledComponent
                  cx="7"
                  cy="7"
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "styled-components__BoxCircle-sc-1vsiozb-2",
                        "isStatic": false,
                        "lastClassName": "c3",
                        "rules": Array [
                          "
  fill: ",
                          [Function],
                          ";
  stroke: ",
                          [Function],
                          ";
  stroke-width: 1px;
  transition: stroke 0.3s cubic-bezier(0.23, 1, 0.32, 1);
",
                        ],
                      },
                      "displayName": "styled-components__BoxCircle",
                      "render": [Function],
                      "styledComponentId": "styled-components__BoxCircle-sc-1vsiozb-2",
                      "target": "circle",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  r="6"
                  value={true}
                >
                  <circle
                    className="c3"
                    cx="7"
                    cy="7"
                    r="6"
                    value={true}
                  />
                </StyledComponent>
              </styled-components__BoxCircle>
              <styled-components__CheckCircle
                cx="7"
                cy="7"
                r="6"
                value={true}
              >
                <StyledComponent
                  cx="7"
                  cy="7"
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "styled-components__CheckCircle-sc-1vsiozb-3",
                        "isStatic": false,
                        "lastClassName": "c4",
                        "rules": Array [
                          "
  fill: ",
                          [Function],
                          ";
  transform-origin: 50% 50%;
  transition: transform 0.45s cubic-bezier(0.23, 1, 0.32, 1);
  transform: scale(
    ",
                          [Function],
                          "
  );
",
                        ],
                      },
                      "displayName": "styled-components__CheckCircle",
                      "render": [Function],
                      "styledComponentId": "styled-components__CheckCircle-sc-1vsiozb-3",
                      "target": "circle",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  r="6"
                  value={true}
                >
                  <circle
                    className="c4"
                    cx="7"
                    cy="7"
                    r="6"
                    value={true}
                  />
                </StyledComponent>
              </styled-components__CheckCircle>
            </svg>
          </StyledComponent>
        </styled-components__SVG>
        Radio
      </label>
    </StyledComponent>
  </styled-components__StyledLabel>
</InputRadio>
`;

exports[`Storyshots InputRadio With custom style 1`] = `
.c2 {
  height: 14px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  line-height: 0;
}

.c0 > input {
  display: none;
}

.c0 > .c1 {
  margin-right: 5px;
}

.c3 {
  fill: #00A1DE;
  stroke: #067CB0;
  stroke-width: 1px;
  -webkit-transition: stroke 0.3s cubic-bezier(0.23,1,0.32,1);
  transition: stroke 0.3s cubic-bezier(0.23,1,0.32,1);
}

.c4 {
  fill: #FFFFFF;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-transition: -webkit-transform 0.45s cubic-bezier(0.23,1,0.32,1);
  -webkit-transition: transform 0.45s cubic-bezier(0.23,1,0.32,1);
  transition: transform 0.45s cubic-bezier(0.23,1,0.32,1);
  -webkit-transform: scale( 0.5 );
  -ms-transform: scale( 0.5 );
  transform: scale( 0.5 );
}

<StatefulInputRadio
  style={
    Object {
      "height": 24,
    }
  }
>
  <InputRadio
    onChange={[Function]}
    style={
      Object {
        "height": 24,
      }
    }
    value={true}
  >
    <styled-components__StyledLabel
      onClick={[Function]}
    >
      <StyledComponent
        forwardedClass={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "styled-components__StyledLabel-sc-1vsiozb-1",
              "isStatic": true,
              "lastClassName": "c0",
              "rules": Array [
                "
  display: flex;
  align-items: center;
  cursor: pointer;
  line-height: 0;

  > input {
    display: none;
  }

  > ",
                ".c1",
                " {
    margin-right: 5px;
  }
",
              ],
            },
            "displayName": "styled-components__StyledLabel",
            "render": [Function],
            "styledComponentId": "styled-components__StyledLabel-sc-1vsiozb-1",
            "target": "label",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        onClick={[Function]}
      >
        <label
          className="c0"
          onClick={[Function]}
        >
          <styled-components__SVG
            style={
              Object {
                "height": 24,
              }
            }
            value={true}
            viewBox="0 0 14 14"
          >
            <StyledComponent
              forwardedClass={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "c1",
                    "isStatic": true,
                    "lastClassName": "c2",
                    "rules": Array [
                      "
  height: 14px;
",
                    ],
                  },
                  "displayName": "styled-components__SVG",
                  "render": [Function],
                  "styledComponentId": "c1",
                  "target": "svg",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              style={
                Object {
                  "height": 24,
                }
              }
              value={true}
              viewBox="0 0 14 14"
            >
              <svg
                className="c1 c2"
                style={
                  Object {
                    "height": 24,
                  }
                }
                value={true}
                viewBox="0 0 14 14"
              >
                <styled-components__BoxCircle
                  cx="7"
                  cy="7"
                  r="6"
                  value={true}
                >
                  <StyledComponent
                    cx="7"
                    cy="7"
                    forwardedClass={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "styled-components__BoxCircle-sc-1vsiozb-2",
                          "isStatic": false,
                          "lastClassName": "c3",
                          "rules": Array [
                            "
  fill: ",
                            [Function],
                            ";
  stroke: ",
                            [Function],
                            ";
  stroke-width: 1px;
  transition: stroke 0.3s cubic-bezier(0.23, 1, 0.32, 1);
",
                          ],
                        },
                        "displayName": "styled-components__BoxCircle",
                        "render": [Function],
                        "styledComponentId": "styled-components__BoxCircle-sc-1vsiozb-2",
                        "target": "circle",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    r="6"
                    value={true}
                  >
                    <circle
                      className="c3"
                      cx="7"
                      cy="7"
                      r="6"
                      value={true}
                    />
                  </StyledComponent>
                </styled-components__BoxCircle>
                <styled-components__CheckCircle
                  cx="7"
                  cy="7"
                  r="6"
                  value={true}
                >
                  <StyledComponent
                    cx="7"
                    cy="7"
                    forwardedClass={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "styled-components__CheckCircle-sc-1vsiozb-3",
                          "isStatic": false,
                          "lastClassName": "c4",
                          "rules": Array [
                            "
  fill: ",
                            [Function],
                            ";
  transform-origin: 50% 50%;
  transition: transform 0.45s cubic-bezier(0.23, 1, 0.32, 1);
  transform: scale(
    ",
                            [Function],
                            "
  );
",
                          ],
                        },
                        "displayName": "styled-components__CheckCircle",
                        "render": [Function],
                        "styledComponentId": "styled-components__CheckCircle-sc-1vsiozb-3",
                        "target": "circle",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    r="6"
                    value={true}
                  >
                    <circle
                      className="c4"
                      cx="7"
                      cy="7"
                      r="6"
                      value={true}
                    />
                  </StyledComponent>
                </styled-components__CheckCircle>
              </svg>
            </StyledComponent>
          </styled-components__SVG>
          Radio
        </label>
      </StyledComponent>
    </styled-components__StyledLabel>
  </InputRadio>
</StatefulInputRadio>
`;

exports[`Storyshots InputRadio With state 1`] = `
.c2 {
  height: 14px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  line-height: 0;
}

.c0 > input {
  display: none;
}

.c0 > .c1 {
  margin-right: 5px;
}

.c3 {
  fill: #00A1DE;
  stroke: #067CB0;
  stroke-width: 1px;
  -webkit-transition: stroke 0.3s cubic-bezier(0.23,1,0.32,1);
  transition: stroke 0.3s cubic-bezier(0.23,1,0.32,1);
}

.c4 {
  fill: #FFFFFF;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-transition: -webkit-transform 0.45s cubic-bezier(0.23,1,0.32,1);
  -webkit-transition: transform 0.45s cubic-bezier(0.23,1,0.32,1);
  transition: transform 0.45s cubic-bezier(0.23,1,0.32,1);
  -webkit-transform: scale( 0.5 );
  -ms-transform: scale( 0.5 );
  transform: scale( 0.5 );
}

<StatefulInputRadio>
  <InputRadio
    onChange={[Function]}
    value={true}
  >
    <styled-components__StyledLabel
      onClick={[Function]}
    >
      <StyledComponent
        forwardedClass={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "styled-components__StyledLabel-sc-1vsiozb-1",
              "isStatic": true,
              "lastClassName": "c0",
              "rules": Array [
                "
  display: flex;
  align-items: center;
  cursor: pointer;
  line-height: 0;

  > input {
    display: none;
  }

  > ",
                ".c1",
                " {
    margin-right: 5px;
  }
",
              ],
            },
            "displayName": "styled-components__StyledLabel",
            "render": [Function],
            "styledComponentId": "styled-components__StyledLabel-sc-1vsiozb-1",
            "target": "label",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        onClick={[Function]}
      >
        <label
          className="c0"
          onClick={[Function]}
        >
          <styled-components__SVG
            value={true}
            viewBox="0 0 14 14"
          >
            <StyledComponent
              forwardedClass={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "c1",
                    "isStatic": true,
                    "lastClassName": "c2",
                    "rules": Array [
                      "
  height: 14px;
",
                    ],
                  },
                  "displayName": "styled-components__SVG",
                  "render": [Function],
                  "styledComponentId": "c1",
                  "target": "svg",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              value={true}
              viewBox="0 0 14 14"
            >
              <svg
                className="c1 c2"
                value={true}
                viewBox="0 0 14 14"
              >
                <styled-components__BoxCircle
                  cx="7"
                  cy="7"
                  r="6"
                  value={true}
                >
                  <StyledComponent
                    cx="7"
                    cy="7"
                    forwardedClass={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "styled-components__BoxCircle-sc-1vsiozb-2",
                          "isStatic": false,
                          "lastClassName": "c3",
                          "rules": Array [
                            "
  fill: ",
                            [Function],
                            ";
  stroke: ",
                            [Function],
                            ";
  stroke-width: 1px;
  transition: stroke 0.3s cubic-bezier(0.23, 1, 0.32, 1);
",
                          ],
                        },
                        "displayName": "styled-components__BoxCircle",
                        "render": [Function],
                        "styledComponentId": "styled-components__BoxCircle-sc-1vsiozb-2",
                        "target": "circle",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    r="6"
                    value={true}
                  >
                    <circle
                      className="c3"
                      cx="7"
                      cy="7"
                      r="6"
                      value={true}
                    />
                  </StyledComponent>
                </styled-components__BoxCircle>
                <styled-components__CheckCircle
                  cx="7"
                  cy="7"
                  r="6"
                  value={true}
                >
                  <StyledComponent
                    cx="7"
                    cy="7"
                    forwardedClass={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "styled-components__CheckCircle-sc-1vsiozb-3",
                          "isStatic": false,
                          "lastClassName": "c4",
                          "rules": Array [
                            "
  fill: ",
                            [Function],
                            ";
  transform-origin: 50% 50%;
  transition: transform 0.45s cubic-bezier(0.23, 1, 0.32, 1);
  transform: scale(
    ",
                            [Function],
                            "
  );
",
                          ],
                        },
                        "displayName": "styled-components__CheckCircle",
                        "render": [Function],
                        "styledComponentId": "styled-components__CheckCircle-sc-1vsiozb-3",
                        "target": "circle",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    r="6"
                    value={true}
                  >
                    <circle
                      className="c4"
                      cx="7"
                      cy="7"
                      r="6"
                      value={true}
                    />
                  </StyledComponent>
                </styled-components__CheckCircle>
              </svg>
            </StyledComponent>
          </styled-components__SVG>
          Radio with state
        </label>
      </StyledComponent>
    </styled-components__StyledLabel>
  </InputRadio>
</StatefulInputRadio>
`;

exports[`Storyshots InputRadio With two radios 1`] = `
.c2 {
  height: 14px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  line-height: 0;
}

.c0 > input {
  display: none;
}

.c0 > .c1 {
  margin-right: 5px;
}

.c3 {
  fill: #00A1DE;
  stroke: #067CB0;
  stroke-width: 1px;
  -webkit-transition: stroke 0.3s cubic-bezier(0.23,1,0.32,1);
  transition: stroke 0.3s cubic-bezier(0.23,1,0.32,1);
}

.c5 {
  fill: #00A1DE;
  stroke: #D1D2D3;
  stroke-width: 1px;
  -webkit-transition: stroke 0.3s cubic-bezier(0.23,1,0.32,1);
  transition: stroke 0.3s cubic-bezier(0.23,1,0.32,1);
}

.c4 {
  fill: #FFFFFF;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-transition: -webkit-transform 0.45s cubic-bezier(0.23,1,0.32,1);
  -webkit-transition: transform 0.45s cubic-bezier(0.23,1,0.32,1);
  transition: transform 0.45s cubic-bezier(0.23,1,0.32,1);
  -webkit-transform: scale( 0.5 );
  -ms-transform: scale( 0.5 );
  transform: scale( 0.5 );
}

.c6 {
  fill: #FFFFFF;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-transition: -webkit-transform 0.45s cubic-bezier(0.23,1,0.32,1);
  -webkit-transition: transform 0.45s cubic-bezier(0.23,1,0.32,1);
  transition: transform 0.45s cubic-bezier(0.23,1,0.32,1);
  -webkit-transform: scale( 1 );
  -ms-transform: scale( 1 );
  transform: scale( 1 );
}

<div>
  <InputRadio
    onChange={[Function]}
    value={true}
  >
    <styled-components__StyledLabel
      onClick={[Function]}
    >
      <StyledComponent
        forwardedClass={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "styled-components__StyledLabel-sc-1vsiozb-1",
              "isStatic": true,
              "lastClassName": "c0",
              "rules": Array [
                "
  display: flex;
  align-items: center;
  cursor: pointer;
  line-height: 0;

  > input {
    display: none;
  }

  > ",
                ".c1",
                " {
    margin-right: 5px;
  }
",
              ],
            },
            "displayName": "styled-components__StyledLabel",
            "render": [Function],
            "styledComponentId": "styled-components__StyledLabel-sc-1vsiozb-1",
            "target": "label",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        onClick={[Function]}
      >
        <label
          className="c0"
          onClick={[Function]}
        >
          <styled-components__SVG
            value={true}
            viewBox="0 0 14 14"
          >
            <StyledComponent
              forwardedClass={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "c1",
                    "isStatic": true,
                    "lastClassName": "c2",
                    "rules": Array [
                      "
  height: 14px;
",
                    ],
                  },
                  "displayName": "styled-components__SVG",
                  "render": [Function],
                  "styledComponentId": "c1",
                  "target": "svg",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              value={true}
              viewBox="0 0 14 14"
            >
              <svg
                className="c1 c2"
                value={true}
                viewBox="0 0 14 14"
              >
                <styled-components__BoxCircle
                  cx="7"
                  cy="7"
                  r="6"
                  value={true}
                >
                  <StyledComponent
                    cx="7"
                    cy="7"
                    forwardedClass={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "styled-components__BoxCircle-sc-1vsiozb-2",
                          "isStatic": false,
                          "lastClassName": "c5",
                          "rules": Array [
                            "
  fill: ",
                            [Function],
                            ";
  stroke: ",
                            [Function],
                            ";
  stroke-width: 1px;
  transition: stroke 0.3s cubic-bezier(0.23, 1, 0.32, 1);
",
                          ],
                        },
                        "displayName": "styled-components__BoxCircle",
                        "render": [Function],
                        "styledComponentId": "styled-components__BoxCircle-sc-1vsiozb-2",
                        "target": "circle",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    r="6"
                    value={true}
                  >
                    <circle
                      className="c3"
                      cx="7"
                      cy="7"
                      r="6"
                      value={true}
                    />
                  </StyledComponent>
                </styled-components__BoxCircle>
                <styled-components__CheckCircle
                  cx="7"
                  cy="7"
                  r="6"
                  value={true}
                >
                  <StyledComponent
                    cx="7"
                    cy="7"
                    forwardedClass={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "styled-components__CheckCircle-sc-1vsiozb-3",
                          "isStatic": false,
                          "lastClassName": "c6",
                          "rules": Array [
                            "
  fill: ",
                            [Function],
                            ";
  transform-origin: 50% 50%;
  transition: transform 0.45s cubic-bezier(0.23, 1, 0.32, 1);
  transform: scale(
    ",
                            [Function],
                            "
  );
",
                          ],
                        },
                        "displayName": "styled-components__CheckCircle",
                        "render": [Function],
                        "styledComponentId": "styled-components__CheckCircle-sc-1vsiozb-3",
                        "target": "circle",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    r="6"
                    value={true}
                  >
                    <circle
                      className="c4"
                      cx="7"
                      cy="7"
                      r="6"
                      value={true}
                    />
                  </StyledComponent>
                </styled-components__CheckCircle>
              </svg>
            </StyledComponent>
          </styled-components__SVG>
          Radio1
        </label>
      </StyledComponent>
    </styled-components__StyledLabel>
  </InputRadio>
  <InputRadio
    onChange={[Function]}
    value={false}
  >
    <styled-components__StyledLabel
      onClick={[Function]}
    >
      <StyledComponent
        forwardedClass={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "styled-components__StyledLabel-sc-1vsiozb-1",
              "isStatic": true,
              "lastClassName": "c0",
              "rules": Array [
                "
  display: flex;
  align-items: center;
  cursor: pointer;
  line-height: 0;

  > input {
    display: none;
  }

  > ",
                ".c1",
                " {
    margin-right: 5px;
  }
",
              ],
            },
            "displayName": "styled-components__StyledLabel",
            "render": [Function],
            "styledComponentId": "styled-components__StyledLabel-sc-1vsiozb-1",
            "target": "label",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        onClick={[Function]}
      >
        <label
          className="c0"
          onClick={[Function]}
        >
          <styled-components__SVG
            value={false}
            viewBox="0 0 14 14"
          >
            <StyledComponent
              forwardedClass={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "c1",
                    "isStatic": true,
                    "lastClassName": "c2",
                    "rules": Array [
                      "
  height: 14px;
",
                    ],
                  },
                  "displayName": "styled-components__SVG",
                  "render": [Function],
                  "styledComponentId": "c1",
                  "target": "svg",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              value={false}
              viewBox="0 0 14 14"
            >
              <svg
                className="c1 c2"
                value={false}
                viewBox="0 0 14 14"
              >
                <styled-components__BoxCircle
                  cx="7"
                  cy="7"
                  r="6"
                  value={false}
                >
                  <StyledComponent
                    cx="7"
                    cy="7"
                    forwardedClass={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "styled-components__BoxCircle-sc-1vsiozb-2",
                          "isStatic": false,
                          "lastClassName": "c5",
                          "rules": Array [
                            "
  fill: ",
                            [Function],
                            ";
  stroke: ",
                            [Function],
                            ";
  stroke-width: 1px;
  transition: stroke 0.3s cubic-bezier(0.23, 1, 0.32, 1);
",
                          ],
                        },
                        "displayName": "styled-components__BoxCircle",
                        "render": [Function],
                        "styledComponentId": "styled-components__BoxCircle-sc-1vsiozb-2",
                        "target": "circle",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    r="6"
                    value={false}
                  >
                    <circle
                      className="c5"
                      cx="7"
                      cy="7"
                      r="6"
                      value={false}
                    />
                  </StyledComponent>
                </styled-components__BoxCircle>
                <styled-components__CheckCircle
                  cx="7"
                  cy="7"
                  r="6"
                  value={false}
                >
                  <StyledComponent
                    cx="7"
                    cy="7"
                    forwardedClass={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "styled-components__CheckCircle-sc-1vsiozb-3",
                          "isStatic": false,
                          "lastClassName": "c6",
                          "rules": Array [
                            "
  fill: ",
                            [Function],
                            ";
  transform-origin: 50% 50%;
  transition: transform 0.45s cubic-bezier(0.23, 1, 0.32, 1);
  transform: scale(
    ",
                            [Function],
                            "
  );
",
                          ],
                        },
                        "displayName": "styled-components__CheckCircle",
                        "render": [Function],
                        "styledComponentId": "styled-components__CheckCircle-sc-1vsiozb-3",
                        "target": "circle",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    r="6"
                    value={false}
                  >
                    <circle
                      className="c6"
                      cx="7"
                      cy="7"
                      r="6"
                      value={false}
                    />
                  </StyledComponent>
                </styled-components__CheckCircle>
              </svg>
            </StyledComponent>
          </styled-components__SVG>
          Radio2
        </label>
      </StyledComponent>
    </styled-components__StyledLabel>
  </InputRadio>
</div>
`;

exports[`Storyshots InputRadio Without label 1`] = `
.c2 {
  height: 14px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  line-height: 0;
}

.c0 > input {
  display: none;
}

.c0 > .c1 {
  margin-right: 5px;
}

.c3 {
  fill: #00A1DE;
  stroke: #067CB0;
  stroke-width: 1px;
  -webkit-transition: stroke 0.3s cubic-bezier(0.23,1,0.32,1);
  transition: stroke 0.3s cubic-bezier(0.23,1,0.32,1);
}

.c4 {
  fill: #FFFFFF;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-transition: -webkit-transform 0.45s cubic-bezier(0.23,1,0.32,1);
  -webkit-transition: transform 0.45s cubic-bezier(0.23,1,0.32,1);
  transition: transform 0.45s cubic-bezier(0.23,1,0.32,1);
  -webkit-transform: scale( 0.5 );
  -ms-transform: scale( 0.5 );
  transform: scale( 0.5 );
}

<StatefulInputRadio>
  <InputRadio
    onChange={[Function]}
    value={true}
  >
    <styled-components__StyledLabel
      onClick={[Function]}
    >
      <StyledComponent
        forwardedClass={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "styled-components__StyledLabel-sc-1vsiozb-1",
              "isStatic": true,
              "lastClassName": "c0",
              "rules": Array [
                "
  display: flex;
  align-items: center;
  cursor: pointer;
  line-height: 0;

  > input {
    display: none;
  }

  > ",
                ".c1",
                " {
    margin-right: 5px;
  }
",
              ],
            },
            "displayName": "styled-components__StyledLabel",
            "render": [Function],
            "styledComponentId": "styled-components__StyledLabel-sc-1vsiozb-1",
            "target": "label",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        onClick={[Function]}
      >
        <label
          className="c0"
          onClick={[Function]}
        >
          <styled-components__SVG
            value={true}
            viewBox="0 0 14 14"
          >
            <StyledComponent
              forwardedClass={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "c1",
                    "isStatic": true,
                    "lastClassName": "c2",
                    "rules": Array [
                      "
  height: 14px;
",
                    ],
                  },
                  "displayName": "styled-components__SVG",
                  "render": [Function],
                  "styledComponentId": "c1",
                  "target": "svg",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              value={true}
              viewBox="0 0 14 14"
            >
              <svg
                className="c1 c2"
                value={true}
                viewBox="0 0 14 14"
              >
                <styled-components__BoxCircle
                  cx="7"
                  cy="7"
                  r="6"
                  value={true}
                >
                  <StyledComponent
                    cx="7"
                    cy="7"
                    forwardedClass={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "styled-components__BoxCircle-sc-1vsiozb-2",
                          "isStatic": false,
                          "lastClassName": "c3",
                          "rules": Array [
                            "
  fill: ",
                            [Function],
                            ";
  stroke: ",
                            [Function],
                            ";
  stroke-width: 1px;
  transition: stroke 0.3s cubic-bezier(0.23, 1, 0.32, 1);
",
                          ],
                        },
                        "displayName": "styled-components__BoxCircle",
                        "render": [Function],
                        "styledComponentId": "styled-components__BoxCircle-sc-1vsiozb-2",
                        "target": "circle",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    r="6"
                    value={true}
                  >
                    <circle
                      className="c3"
                      cx="7"
                      cy="7"
                      r="6"
                      value={true}
                    />
                  </StyledComponent>
                </styled-components__BoxCircle>
                <styled-components__CheckCircle
                  cx="7"
                  cy="7"
                  r="6"
                  value={true}
                >
                  <StyledComponent
                    cx="7"
                    cy="7"
                    forwardedClass={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "styled-components__CheckCircle-sc-1vsiozb-3",
                          "isStatic": false,
                          "lastClassName": "c4",
                          "rules": Array [
                            "
  fill: ",
                            [Function],
                            ";
  transform-origin: 50% 50%;
  transition: transform 0.45s cubic-bezier(0.23, 1, 0.32, 1);
  transform: scale(
    ",
                            [Function],
                            "
  );
",
                          ],
                        },
                        "displayName": "styled-components__CheckCircle",
                        "render": [Function],
                        "styledComponentId": "styled-components__CheckCircle-sc-1vsiozb-3",
                        "target": "circle",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    r="6"
                    value={true}
                  >
                    <circle
                      className="c4"
                      cx="7"
                      cy="7"
                      r="6"
                      value={true}
                    />
                  </StyledComponent>
                </styled-components__CheckCircle>
              </svg>
            </StyledComponent>
          </styled-components__SVG>
        </label>
      </StyledComponent>
    </styled-components__StyledLabel>
  </InputRadio>
</StatefulInputRadio>
`;
